--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "https://jjjj55.github.io/23_KNU_CapstoneDesign/",
   "display": "standalone",
   "theme_color": "#031230",
   "background_color": "#031230"
