--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jjjj55.github.io/PwaTest/",
+  "homepage": "https://jjjj55.github.io/23_KNU_CapstoneDesign/",
   "proxy": "http://43.202.47.103:5000",
   "devDependencies": {
     "gh-pages": "^6.0.0"
