--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.4.5",
@@ -56,7 +57,6 @@
     ]
   },
   "homepage": "https://jjjj55.github.io/23_KNU_CapstoneDesign/",
-  "proxy": "http://43.202.47.103:5000",
   "devDependencies": {
     "gh-pages": "^6.0.0"
   }
