서비스 이름 변경

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Re:pair",
-  "name": "Re:pair app",
+  "name": "Re:pair",
   "icons": [
     {
       "src": "./favicomatic/apple-touch-icon-57x57.png",
