--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,27 +5,27 @@
     {
       "src": "./favicomatic/apple-touch-icon-57x57.png",
       "sizes": "57x57",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "./favicomatic/apple-touch-icon-60x60.png",
       "sizes": "60x60",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "./favicomatic/apple-touch-icon-72x72.png",
       "sizes": "72x72",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "./favicomatic/apple-touch-icon-76x76.png",
       "sizes": "76x76",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "./favicomatic/apple-touch-icon-114x114.png",
       "sizes": "114x114",
-      "type": "image/png"
+      "type": "image/x-icon"
     },
     {
       "src": "./favicomatic/apple-touch-icon-120x120.png",
