--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "mstile-150x150.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "270x270"
     },
     {
-      "src": "logo512.png",
+      "src": "mstile-310x310.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "558x558"
     }
   ],
   "start_url": ".",
