--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jjjj55.github.io/23_KNU_CapstoneDesign/",
+  "homepage": "https://repairproject.net/",
   "devDependencies": {
     "gh-pages": "^6.0.0"
   }
